--- a/app/src/main/res/drawable/textview_border.xml
+++ b/app/src/main/res/drawable/textview_border.xml
@@ -3,7 +3,7 @@
     <solid android:color="@android:color/transparent" />  <!-- Set transparent background -->
     <stroke
         android:width="1dp"
-        android:color="@android:color/black"/>
+        android:color="#ccc"/>
     <corners android:radius="8dp"/>
     <padding
         android:left="16dp"/>
