--- a/app/src/main/res/layout/activity_navigation.xml
+++ b/app/src/main/res/layout/activity_navigation.xml
@@ -16,7 +16,12 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:menu="@menu/bottom_nav_menu" />
+        app:itemIconTint="@drawable/bottom_nav_icon_colors"
+        app:itemTextColor="@drawable/bottom_nav_icon_colors"
+        app:fontFamily="@font/poppins"
+        app:menu="@menu/bottom_nav_menu"
+        style="@style/BottomNavTextStyle"
+        />
 
     <fragment
         android:id="@+id/navHost"
