--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,26 +2,27 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+
         android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_home_black_24dp"
+        android:icon="@drawable/homeicon"
         android:title="@string/title_home" />
 
     <item
         android:id="@+id/navigation_search"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_search" />
+        android:icon="@drawable/ordersicon"
+        android:title="@string/title_all_orders" />
     <item
         android:id="@+id/navigation_orders"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_orders" />
+        android:icon="@drawable/carticon"
+        android:title="@string/title_cart" />
 
     <item
         android:id="@+id/navigation_notifications"
-        android:icon="@drawable/ic_notifications_black_24dp"
+        android:icon="@drawable/ring_ic"
         android:title="@string/title_notifications" />
     <item
         android:id="@+id/navigation_profil"
-        android:icon="@drawable/ic_notifications_black_24dp"
+        android:icon="@drawable/profileicon"
         android:title="@string/title_profil" />
 
 </menu>
