--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -58,7 +58,6 @@
         android:layout_marginStart="48dp"
         android:layout_marginEnd="48dp"
         android:layout_marginBottom="8dp"
-        android:enabled="false"
         android:text="SIGN IN"
         android:textColor="@color/white"
         android:textSize="17sp"
@@ -187,8 +186,9 @@
         android:layout_marginTop="24dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="112dp"
-        android:enabled="false"
-        android:text="SIGNIN WITH GOOGLE"
+        android:text="SIGN IN WITH GOOGLE"
+        app:icon="@drawable/googlepng"
+        app:iconGravity="textStart"
         android:textColor="@color/white"
         android:textSize="14sp"
         app:backgroundTint="#EEA734"
