--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -184,7 +184,9 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="48dp"
         android:enabled="false"
-        android:text="GOOGLE ( PAS ENCORE IMPLIMENTé)"
+        app:icon="@drawable/googlepng"
+        app:iconGravity="textStart"
+        android:text="GOOGLE"
         android:textColor="@color/white"
         android:textSize="14sp"
         app:backgroundTint="#EEA734"
