--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -19,7 +19,7 @@
     </fragment>
 
     <fragment
-        android:id="@+id/navigation_search"
+        android:id="@+id/order"
         android:name="com.example.projet_mobile.main.AllOrders"
         android:label="title_search"
         tools:layout="@layout/fragment_all_orders" />
@@ -27,7 +27,14 @@
         android:id="@+id/navigation_orders"
         android:name="com.example.projet_mobile.main.Cart"
         android:label="@string/title_cart"
-        tools:layout="@layout/fragment_cart" />
+        tools:layout="@layout/fragment_cart"
+        >
+        <action
+            android:id="@+id/action_navigation_cart_to_order"
+            app:destination="@id/order" />
+
+    </fragment>
+
     <fragment
         android:id="@+id/navigation_notifications"
         android:name="com.example.projet_mobile.main.Home"
